fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
   margin-left: -82%;
   text-align: center;
   font-size: 30px;
-  padding-left: 30px;
+  padding-left: 50px;
   padding-top: 15px;
   padding-right: 15px;
 }
